# OSQP-Demo

./: CMakeLists.txt  README.md  tutorial.cpp
osqp_demo/: CMakeLists.txt  osqp_demo.cpp  osqp_demo.h
traj_opt/: CMakeLists.txt
traj_opt/src/test/: osqp_demo.cpp  osqp_demo.h
traj_opt/src/trajectory/: bspline_basis.cpp  bspline_basis.h  bspline_trajectory.cpp  bspline_trajectory.h  kinematic_trajectory_optimization.cpp  kinematic_trajectory_optimization.h  math_utility.cpp  math_utility.h  trajectory.cpp  trajectory.h
traj_opt/src/trajectory/doc/: latex.tex  traj_opt_formula.tex
